--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Ashutosh's Portfolio"
+      name="Timbo Yuen's Portfolio"
       content="Portfolio content"
     />
-    <meta property="og:title" content="Ashutosh Hathidara Portfolio" />
+    <meta property="og:title" content="Timbo Yuen Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
-    <meta name="description" content="Ashutosh's Personal Portfolio Website" property="og:description">
+    <meta property="og:url" content="https://timboyuen.github.io/" />
+    <meta name="description" content="Timbo's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
-    <meta name="keywords" content="Ashutosh, PortFolio, MasterPortfolio, Ashutosh's Portfolio" />
-    <meta name="author" content="Ashutosh" />
-    <meta name="application-name" content="Ashutosh's PortFolio" />
+    <meta name="keywords" content="Timbo, PortFolio, MasterPortfolio, Timbo's Portfolio" />
+    <meta name="author" content="Timbo" />
+    <meta name="application-name" content="Timbo's PortFolio" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
@@ -36,28 +36,47 @@
     <meta name="theme-color" content="#000000">
 
     <!--Adsense Advertisement-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8496416575848967" crossorigin="anonymous"></script>
+
+    <!--REMOVE THIS ONCE ADSENSE WORKS <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-8856447829714090",
         enable_page_level_ads: true
       });
-    </script>
+    </script> -->
 
-    <!-- Global site tag (gtag.js) - Google Ads: 825508380 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-825508380"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-825508380'); </script>
-    <!--
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KZ9BF9K');</script>
+    <!-- End Google Tag Manager -->
+
+
+    <!--    Global site tag (gtag.js) - Google Ads: 825508380 --> 
+  <!--   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-825508380"></script> 
+    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-825508380'); </script>
+   -->  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    --> 
+
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158726526-1"></script>
+    <!--     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158726526-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
       gtag('config', 'UA-158726526-1');
-    </script>
+    </script> -->
+
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link
@@ -77,9 +96,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ashutosh's Portfolio</title>
+    <title>Timbo's Portfolio</title>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZ9BF9K"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
