Added in google analytics tag.

--- a/public/index.html
+++ b/public/index.html
@@ -37,24 +37,41 @@
 
     <!--Adsense Advertisement-->
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8496416575848967" crossorigin="anonymous"></script>
+<!--     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8496416575848967" crossorigin="anonymous"></script> -->
 
-    <!--REMOVE THIS ONCE ADSENSE WORKS <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!--    I copied and pasted the above adsense id into the bottom here  -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-8856447829714090",
+        google_ad_client: "ca-pub-8496416575848967",
         enable_page_level_ads: true
       });
-    </script> -->
+    </script>
 
 
+
+ <!-- this tag manager was set up for actions and such, but I don't have any usage for this-->
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<!--     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KZ9BF9K');</script>
+    })(window,document,'script','dataLayer','GTM-KZ9BF9K');</script> -->
     <!-- End Google Tag Manager -->
+
+
+
+    
+    <!-- (For Google Analytics) Google tag (gtag.js) Measurement ID: G-6N7PXFFTV1 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6N7PXFFTV1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-6N7PXFFTV1');
+    </script>
+
 
 
     <!--    Global site tag (gtag.js) - Google Ads: 825508380 --> 
@@ -64,18 +81,6 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     --> 
-
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!--     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158726526-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-
-      gtag('config', 'UA-158726526-1');
-    </script> -->
-
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
