perhaps disabling adsense will make it work

--- a/public/index.html
+++ b/public/index.html
@@ -40,13 +40,13 @@
 <!--     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8496416575848967" crossorigin="anonymous"></script> -->
 
 <!--    I copied and pasted the above adsense id into the bottom here  -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!--     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-8496416575848967",
         enable_page_level_ads: true
       });
-    </script>
+    </script> -->
 
 
 
