--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,12 @@
 
 
  <!-- this tag manager was set up for actions and such, but I don't have any usage for this-->
-    <!-- Google Tag Manager -->
-<!--     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <!-- Google Tag Manager (GTM-KZ9BF9K)-->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KZ9BF9K');</script> -->
+    })(window,document,'script','dataLayer','GTM-KZ9BF9K');</script>
     <!-- End Google Tag Manager -->
 
 
@@ -104,7 +104,7 @@
     <title>Timbo's Portfolio</title>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) (GTM-KZ9BF9K) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZ9BF9K"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
