Okay fixed.  Updating the deploy script and opengraph url point to timboyuen.com and disabled adsense for now

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta property="og:title" content="Timbo Yuen Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://timboyuen.github.io/" />
+    <meta property="og:url" content="https://timboyuen.com/" />
     <meta name="description" content="Timbo's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
     <meta name="keywords" content="Timbo, PortFolio, MasterPortfolio, Timbo's Portfolio" />
